make navbar fixed and add z-index

--- a/src/styles/carousel1.css
+++ b/src/styles/carousel1.css
@@ -1,5 +1,6 @@
 .carouselImg {
   height: 50vh;
+  margin-top: 45px;
 }
  .carouselBody {
    color: white;
